--- a/css/style.css
+++ b/css/style.css
@@ -21,110 +21,60 @@ body {
 
 html {
   font-size: 10px;
+} /*footer INDEX*/
+footer .sec-redes {
+  margin: 10% 0% 15% 0%;
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
-
-/*footer INDEX*/
+footer .redes-item {
+  margin: 8% 20% 5% 0%;
+  width: 15%;
+}
+footer .textosredes {
+  margin: 5% 15% 2% 0;
+  font-size: 20px;
+  font-family: "Open Sans", sans-serif;
+  display: block;
+  color: black;
+}
 footer .imagenfoot {
   background-color: white;
 }
 footer .fotosfoot {
-  width: 50%;
   margin: 0% 0% 0% 25%;
-}
-footer .redes {
-  margin: 5% 5%;
-  padding: 5% 5% 6% 3%;
-}
-footer .textosredes {
-  font-size: 15px;
-  margin: 5% 15% 1% 0%;
-  font-family: "Open Sans", sans-serif;
-  display: block;
-  color: black;
-}
-footer .logowhats {
-  width: 23%;
-}
-footer .logoinsta {
-  width: 20%;
-}
-footer .logomail {
-  width: 18%;
-}
-footer .logopago {
-  width: 40%;
+  width: 50%;
 }
 footer div .copy {
-  font-size: 2rem;
   margin: 1% 29% 1% 1%;
+  font-size: 2rem;
   font-family: "Open Sans", sans-serif;
   display: block;
   color: black;
 }
 
-/*redes contacto*/
-@media screen and (max-width: 992px) {
+/*Medias queries*/
+@media screen and (max-width: 820px) {
+  footer .sec-redes {
+    margin: 10% 0% 15% 0%;
+  }
+  footer .redes-item {
+    margin: 8% 20% 5% 0%;
+    width: 15%;
+  }
   footer .textosredes {
-    margin: 5% 15% 1% 10%;
-    font-size: 1rem;
-  }
-  footer .logowhats {
-    width: 18%;
-  }
-  footer .logoinsta {
-    width: 18%;
-  }
-  footer .logomail {
-    width: 17%;
-  }
-  footer .logopago {
-    width: 33%;
-  }
-}
-@media screen and (max-width: 578px) {
-  footer .fotosfoot {
-    width: 80%;
-    margin: 1% 6% 1% 10%;
+    margin: 1% 15% 6% 5%;
+    font-size: 15px;
   }
 }
 @media screen and (max-width: 465px) {
-  footer .imagenfoot {
-    margin: 1% 1% 3% 1%;
-  }
-  footer .redes {
-    margin: 10% 0%;
+  footer div .copy {
+    margin: 1% 29% 1% 1%;
+    font-size: 12px;
   }
   footer .textosredes {
-    margin: 3% 1% 9% 0%;
-    font-size: 6px;
-  }
-  footer .logowhats {
-    width: 10%;
-  }
-  footer .logoinsta {
-    width: 10%;
-  }
-  footer .logomail {
-    width: 10%;
-  }
-  footer .logopago {
-    width: 30%;
-  }
-  footer div .copy {
-    font-size: 6px;
-    margin: 1% 29% 1% 1%;
-  }
-}
-@media screen and (max-width: 400px) {
-  footer .redes {
-    margin: 20% 1% 10% 0%;
-  }
-  footer .imagenfoot {
-    margin: 12% 0%;
-  }
-  footer .fotosfoot {
-    width: 65%;
-    margin: 0% 0% 0% 19%;
+    font-size: 13px;
   }
 }
 html {
@@ -134,41 +84,53 @@ html {
 /*HEADER INDEX*/
 header div .logo-inicio {
   margin: 1% 1%;
-  width: 15%;
+  width: 20%;
   display: flex;
   justify-content: left;
   align-items: flex-end;
   flex-wrap: wrap;
 }
+header .container-abierto {
+  animation: translate 10s infinite;
+  animation-direction: reverse;
+  animation-timing-function: linear;
+}
+@keyframes translate {
+  from {
+    transform: translate(50%);
+    to {
+      transform: translate(50%);
+    }
+  }
+}
 header .abierto {
   font-size: 2rem;
   font-family: "Open Sans", sans-serif;
   color: black;
-  margin: 1% 35%;
-  width: 15%;
   display: inline;
 }
-header nav div a .whats-inicio {
+header nav a .whats-inicio {
+  margin: 3% 8%;
   width: 6%;
-  margin: 1% 1%;
   position: fixed;
   top: 0;
   right: 0;
   display: flex;
   justify-content: right;
   flex-wrap: wrap;
+  z-index: 1;
 }
 header .titulo {
   color: orange;
-  font-size: 4rem;
   font-family: "Orbitron", sans-serif;
   border: 3px solid whitesmoke;
   background-color: black;
   padding: 3% 1%;
-  margin: 1% 1%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin: 1% 1%;
+  font-size: 4rem;
 }
 header .navbarsect {
   margin: 1% 1%;
@@ -177,23 +139,12 @@ header .linkinicio {
   text-decoration: none;
   list-style-type: none;
   font-family: "Open Sans", sans-serif;
-  font-size: 2rem;
   margin: 0% 5% 0% 10%;
+  font-size: 2rem;
 }
 
-@media screen and (max-width: 992px) {
-  header .abierto {
-    margin: 1% 32%;
-  }
-}
-@media screen and (max-width: 798px) {
-  header .abierto {
-    margin: 1% 22%;
-  }
-}
 @media screen and (max-width: 516px) {
   header .abierto {
-    margin: 1% 1%;
     font-size: 1.5rem;
   }
   header .titulo {
@@ -220,44 +171,48 @@ html {
 
 /*MAIN INDEX*/
 main .carrousel {
-  width: 70%;
   margin: 5% 1% 5% 15%;
+  width: 70%;
 }
 
 @media screen and (max-width: 465px) {
   main .carrousel {
-    width: 77%;
-    margin: 2% 0% 4% 10%;
-  }
-}
-@media screen and (max-width: 400px) {
-  main .carrousel {
-    width: 80%;
-    margin: 12% 1% 5% 10%;
+    margin: 15% 0% 15% 0%;
+    width: 100%;
   }
 }
 /*MAIN NOSOTROS*/
 main .parrafo-quienes {
   padding: 5% 14%;
-  margin: 5% 5%;
   color: whitesmoke;
   border: 6px solid whitesmoke;
-  font-size: 4rem;
   font-family: "Open Sans", sans-serif;
+  margin: 5% 5%;
+  font-size: 1rem;
 }
 
 @media screen and (max-width: 915px) {
   main .parrafo-quienes {
-    margin: 8% 3% 8% 3%;
     padding: 2% 2% 2% 2%;
+    margin: 8% 3% 8% 3%;
     font-size: 2rem;
   }
 }
 /*main productos*/
+main .sec-products {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  justify-content: center;
+}
 main .imgproduct {
   width: 70%;
   height: 80%;
   border-radius: 15%;
+}
+main .imgproduct:hover {
+  transform: scale(0.7);
+  transition: all, 0.5s;
 }
 main .textproduct {
   font-size: 2rem;
@@ -265,18 +220,17 @@ main .textproduct {
 }
 
 /*medias*/
-@media screen and (max-width: 990px) {
-  main .textproduct {
-    font-size: 24px;
+@media screen and (max-width: 550px) {
+  main .sec-products {
+    grid-template-columns: 50% 50%;
+    margin: 5% 5%;
   }
   main .imgproduct {
-    width: 90%;
-    height: 60%;
+    width: 60%;
+    height: 70%;
   }
-}
-@media screen and (max-width: 770px) {
   main .textproduct {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 /*main SERVICIOS*/
@@ -285,10 +239,9 @@ main .imgservicios {
   height: 100%;
   border-radius: 15%;
 }
-main .imgservicios3 {
-  width: 100%;
-  height: 100%;
-  border-radius: 15%;
+main .imgservicios:hover {
+  transform: scale(0.75);
+  transition: all, 0.5s;
 }
 main .servicioscont {
   margin: 6% 0% 20% 3%;
@@ -301,8 +254,8 @@ main .tituloservicios {
 main .listaautomotor li {
   list-style-type: none;
   font-family: "Open Sans", sans-serif;
-  font-size: 2rem;
   margin: 9% 1% 0% 11%;
+  font-size: 2rem;
 }
 
 /*medias*/
@@ -312,19 +265,11 @@ main .listaautomotor li {
     height: 90%;
     border-radius: 10%;
   }
-  main .imgservicios3 {
-    width: 95%;
-    height: 76%;
-    border-radius: 10%;
-  }
 }
 @media screen and (max-width: 775px) {
   main .imgservicios {
     height: 75%;
-  }
-  main .imgservicios3 {
     width: 95%;
-    height: 76%;
   }
   main .tituloservicios {
     padding: 1% 11%;
@@ -333,34 +278,34 @@ main .listaautomotor li {
     font-size: 12px;
   }
   main .listaautomotor li {
-    font-size: 12px;
     margin: 8% 0% 0% 0%;
+    font-size: 12px;
   }
   main .servicioscont {
-    margin: 8% 0% 3% 3%;
+    margin: 8% 0% 3% 0%;
   }
 }
 /*MAIN CONTACTO*/
 /*mapita*/
 main .mapita {
-  width: 80%;
   margin: 1% 20%;
+  width: 80%;
 }
 main .form {
-  width: 40%;
   margin: 1% 1%;
+  width: 40%;
 }
 
 /*medias*/
 @media screen and (max-width: 465px) {
   main .mapita {
-    width: 130%;
     height: 50%;
     margin: 20% 38%;
+    width: 130%;
   }
   main .form {
-    width: 70%;
     margin: 3% 15%;
+    width: 70%;
   }
 }
 .disclaimer {
