--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -19,11 +19,11 @@ header {
 .container-abierto {animation: translate 10s infinite;
     animation-direction: reverse;
     animation-timing-function: linear;
-   
+    animation-fill-mode: initial;   
 }
 
-@keyframes translate { from { transform: translate(50%);
-    to {transform: translate(50%);} }}
+@keyframes translate { from { transform: translate(100%);
+    to {transform: translate(0);} }}
 
     .abierto {
         font-size: nth($size-fonts, 3);
