--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ header {
 }
 header div .img-logo {
   margin: 1% 1%;
-  width: 20%;
+  width: 26%;
   display: flex;
   justify-content: left;
   align-items: flex-end;
@@ -105,8 +105,10 @@ header nav .container-whats {
   justify-content: right;
   flex-wrap: wrap;
   z-index: 1;
+}
+header .img-whats {
   margin: 2% 12%;
-  width: 100%;
+  width: 10%;
 }
 header .container-abierto {
   animation: translate 2s;
@@ -151,7 +153,7 @@ header .linkinicio {
 
 @media screen and (max-width: 516px) {
   header .p-abierto {
-    font-size: 1.5rem;
+    font-size: 18px;
   }
   header .h1-titulo {
     font-size: 2rem;
