--- a/css/style.css
+++ b/css/style.css
@@ -23,31 +23,34 @@ body {
 html {
   font-size: 10px;
 } /*footer INDEX*/
-footer .sec-redes {
+footer .section-redes {
   margin: 10% 0% 15% 0%;
   display: flex;
   text-align: center;
   justify-content: center;
 }
-footer .redes-item {
+footer .item-redes {
   margin: 8% 20% 5% 0%;
   width: 15%;
 }
-footer .textosredes {
+footer .item-redes:hover {
+  filter: opacity(0.5);
+}
+footer .p-redes {
   margin: 5% 15% 2% 0;
   font-size: 20px;
   font-family: "Open Sans", sans-serif;
   display: block;
   color: black;
 }
-footer .imagenfoot {
+footer .container-imgfoot {
   background-color: white;
 }
-footer .fotosfoot {
+footer .img-foot {
   margin: 0% 0% 0% 25%;
   width: 50%;
 }
-footer div .copy {
+footer div .p-copy {
   margin: 1% 29% 1% 1%;
   font-size: 2rem;
   font-family: "Open Sans", sans-serif;
@@ -57,24 +60,24 @@ footer div .copy {
 
 /*Medias queries*/
 @media screen and (max-width: 820px) {
-  footer .sec-redes {
+  footer .section-redes {
     margin: 10% 0% 15% 0%;
   }
-  footer .redes-item {
+  footer .item-redes {
     margin: 8% 20% 5% 0%;
     width: 15%;
   }
-  footer .textosredes {
+  footer .p-redes {
     margin: 1% 15% 6% 5%;
     font-size: 15px;
   }
 }
 @media screen and (max-width: 465px) {
-  footer div .copy {
+  footer div .p-copy {
     margin: 1% 29% 1% 1%;
     font-size: 12px;
   }
-  footer .textosredes {
+  footer .p-redes {
     font-size: 13px;
   }
 }
@@ -111,7 +114,7 @@ header .img-whats {
   width: 10%;
 }
 header .container-abierto {
-  animation: translate 2s;
+  animation: translate 4s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
@@ -153,7 +156,7 @@ header .linkinicio {
 
 @media screen and (max-width: 516px) {
   header .p-abierto {
-    font-size: 18px;
+    font-size: 13px;
   }
   header .h1-titulo {
     font-size: 2rem;
@@ -190,7 +193,7 @@ main .carrousel {
   }
 }
 /*MAIN NOSOTROS*/
-main .parrafo-quienes {
+main .p-quienes {
   padding: 5% 14%;
   color: whitesmoke;
   border: 6px solid whitesmoke;
@@ -200,44 +203,43 @@ main .parrafo-quienes {
 }
 
 @media screen and (max-width: 915px) {
-  main .parrafo-quienes {
+  main .p-quienes {
     padding: 2% 2% 2% 2%;
     margin: 8% 3% 8% 3%;
     font-size: 2rem;
   }
 }
 /*main productos*/
-main .sec-products {
+main .container-products {
   width: 100%;
   display: grid;
   grid-template-columns: 30% 30% 30%;
   justify-content: center;
 }
-main .imgproduct {
+main .img-product {
   width: 70%;
   height: 80%;
   border-radius: 15%;
 }
-main .imgproduct:hover {
-  transform: scale(0.7);
-  transition: all, 0.5s;
+main .img-product:hover {
+  transform: scale(1.1);
 }
-main .textproduct {
+main .p-product {
   font-size: 2rem;
   font-family: "Open Sans", sans-serif;
 }
 
 /*medias*/
 @media screen and (max-width: 550px) {
-  main .sec-products {
+  main .container-products {
     grid-template-columns: 50% 50%;
     margin: 5% 5%;
   }
-  main .imgproduct {
+  main .img-product {
     width: 60%;
     height: 70%;
   }
-  main .textproduct {
+  main .p-product {
     font-size: 12px;
   }
 }
