--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -6,17 +6,19 @@
 
 footer {
 
-    .sec-redes {
+    .section-redes {
         margin: 10% 0% 15% 0%;
         display: flex;
         text-align: center;
         justify-content: center
     }
-    .redes-item {
+    .item-redes{
         @include margwid (8% 20% 5% 0%, 15%);
     }
 
-    .textosredes {
+    .item-redes:hover {filter: opacity(.5);}
+
+    .p-redes {
 @include fontmar (5% 15% 2% 0, 20px);
        
         font-family: 'Open Sans', sans-serif;
@@ -25,12 +27,12 @@ footer {
     }
 
 
-    .imagenfoot {
+    .container-imgfoot {
 
         background-color: nth($colors, 4)
     }
 
-    .fotosfoot {
+    .img-foot {
         @include margwid (0% 0% 0% 25%, 50%);
 
     }
@@ -38,7 +40,7 @@ footer {
 
     div {
 
-        .copy {
+        .p-copy {
 
             @include fontmar (1% 29% 1% 1%, 2rem);
             font-family: nth($fonts, 1);
@@ -57,16 +59,16 @@ footer {
 
 @media screen and (max-width: 820px) {
     footer {
-        .sec-redes {
+        .section-redes {
             margin: 10% 0% 15% 0%;
         }
 
 
-        .redes-item {
+        .item-redes {
             @include margwid (8% 20% 5% 0%, 15%)
         }
 
-        .textosredes {
+        .p-redes {
 @include fontmar (1% 15% 6% 5%, 15px); 
            
         }
@@ -80,12 +82,12 @@ footer {
     footer {
 
         div {
-            .copy {
+            .p-copy {
 @include fontmar (1% 29% 1% 1%, 12px);
             }
         }
 
-        .textosredes {
+        .p-redes{
 
             font-size: 13px;
         }
