--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@ main .img-product {
 }
 main .img-product:hover {
   transform: scale(1.1);
+  overflow: hidden;
 }
 main .p-product {
   font-size: 2rem;
@@ -252,9 +253,10 @@ main .img-servicios {
 main .img-servicios:hover {
   transform: scale(0.75);
   transition: all, 0.5s;
+  overflow: hidden;
 }
 main .container-servicios {
-  margin: 6% 0% 20% 3%;
+  margin: 10% 10%;
 }
 main .titulo-servicios {
   padding: 2% 3%;
